<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/normal_margin">

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="choose_photo,choose_video,take_photo,record_video,record_audio,pick_file,pick_contact,schedule_message"
        app:flow_verticalGap="@dimen/small_margin"
        app:flow_wrapMode="aligned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/choose_photo"
        android:layout_width="@dimen/attachment_button_width"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:minHeight="@dimen/attachment_button_height"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/medium_margin"
        android:paddingVertical="@dimen/medium_margin">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/choose_photo_icon"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_gravity="center"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/black8_14000000"
            android:padding="@dimen/medium_margin"
            android:src="@drawable/gallery_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/choose_photo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/image"
            android:textAlignment="center"
            android:textColor="@color/textColor333333"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/choose_video"
        android:layout_width="@dimen/attachment_button_width"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:minHeight="@dimen/attachment_button_height"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/medium_margin"
        android:paddingVertical="@dimen/medium_margin">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/choose_video_icon"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_gravity="center"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/black8_14000000"
            android:padding="@dimen/medium_margin"
            android:src="@drawable/gallery_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/choose_video_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/video"
            android:textAlignment="center"
            android:textColor="@color/textColor333333"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/take_photo"
        android:layout_width="@dimen/attachment_button_width"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:minHeight="@dimen/attachment_button_height"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/medium_margin"
        android:paddingVertical="@dimen/medium_margin">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/take_photo_icon"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_gravity="center"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/black8_14000000"
            android:padding="@dimen/medium_margin"
            android:src="@drawable/camera_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/take_photo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/camera"
            android:textAlignment="center"
            android:textColor="@color/textColor333333"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/record_video"
        android:layout_width="@dimen/attachment_button_width"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:minHeight="@dimen/attachment_button_height"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/medium_margin"
        android:paddingVertical="@dimen/medium_margin">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/record_video_icon"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_gravity="center"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/black8_14000000"
            android:padding="@dimen/medium_margin"
            android:src="@drawable/record_video_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/record_video_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/video"
            android:textAlignment="center"
            android:textColor="@color/textColor333333"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/record_audio"
        android:layout_width="@dimen/attachment_button_width"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:minHeight="@dimen/attachment_button_height"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/medium_margin"
        android:paddingVertical="@dimen/medium_margin">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/record_audio_icon"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_gravity="center"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/black8_14000000"
            android:padding="@dimen/medium_margin"
            android:src="@drawable/mic_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/record_audio_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/voice"
            android:textAlignment="center"
            android:textColor="@color/textColor333333"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pick_file"
        android:layout_width="@dimen/attachment_button_width"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:minHeight="@dimen/attachment_button_height"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/medium_margin"
        android:paddingVertical="@dimen/medium_margin"
        android:textColor="@color/textColor333333">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/pick_file_icon"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_gravity="center"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/black8_14000000"
            android:padding="@dimen/medium_margin"
            android:src="@drawable/files_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pick_file_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/files"
            android:textAlignment="center"
            android:textColor="@color/textColor333333"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pick_contact"
        android:layout_width="@dimen/attachment_button_width"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:minHeight="@dimen/attachment_button_height"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/medium_margin"
        android:paddingVertical="@dimen/medium_margin"
        android:textColor="@color/textColor333333">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/pick_contact_icon"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_gravity="center"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/black8_14000000"
            android:padding="@dimen/medium_margin"
            android:src="@drawable/contact_chose_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pick_contact_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/contact"
            android:textAlignment="center"
            android:textColor="@color/textColor333333"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/schedule_message"
        android:layout_width="@dimen/attachment_button_width"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:minHeight="@dimen/attachment_button_height"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/medium_margin"
        android:paddingVertical="@dimen/medium_margin">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/schedule_message_icon"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_gravity="center"
            android:background="@drawable/circle_background"
            android:backgroundTint="@color/black8_14000000"
            android:padding="@dimen/medium_margin"
            app:tint="@color/textColor333333"
            android:src="@drawable/scheduled_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/schedule_message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/schedule"
            android:textAlignment="center"
            android:textColor="@color/textColor333333"
            android:textSize="@dimen/normal_text_size" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
